# mango-ingest

./: README.md  USAGE.md  pyproject.toml  requirements.txt
doc/examples/: extract_metadata.py
src/: mango_ingest.py
